--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-PORT=3500
-MONGO_URI="mongodb+srv://shangesh:shangesh@cluster0.gpgon.mongodb.net/StoreSphere?retryWrites=true&w=majority&appName=Cluster0"
-JWT_SECRET=shangesh123
-COOKIE_EXPIRES_TIME=7
-FIREBASE_API="AIzaSyAHKeXJEz1Xe2tYovBV2qwoSR-PykVFR28"
-BACKEND_URL=http://127.0.0.1:3500
-FRONTEND_URL=http://127.0.0.1:3000
+REACT_APP_BACKEND_URL=https://localhost:3500/12345678
